force-app/main/default/objects/Customer_Master_Configurations__c/Customer_Master_Configurations__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Customer Master Configurations</description>
    <label>Customer Master Configurations</label>
</CustomObject>