force-app/main/default/objects/Customer_Master_Configurations__c/fields/Configuration_Type__c.field-meta.xml
<CustomField>
    <fullName>Configuration_Type__c</fullName>
    <complianceGroup>None</complianceGroup>
    <description>Defines the type of data whether data is about defining constants or ordering DMLs etc.</description>
    <label>Configuration Type</label>
    <length>40</length>
    <type>Text</type>
</CustomField>