force-app/main/default/objects/Customer_Master_Configurations__c/fields/Constant_Description__c.field-meta.xml
<CustomField>
    <fullName>Constant_Description__c</fullName>
    <complianceGroup>None</complianceGroup>
    <description>Description of the constant</description>
    <label>Constant Description</label>
    <length>150</length>
    <type>Text</type>
</CustomField>