force-app/main/default/objects/Customer_Master_Configurations__c/fields/Constant_value__c.field-meta.xml
<CustomField>
    <fullName>Constant_value__c</fullName>
    <complianceGroup>None</complianceGroup>
    <description>Customer Master Constant related value</description>
    <label>Constant value</label>
    <length>50</length>
    <type>Text</type>
</CustomField>