force-app/main/default/objects/Customer_Master_Configurations__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <complianceGroup>None</complianceGroup>
    <description>Holds the priority of business unit</description>
    <label>Priority</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>