force-app/main/default/objects/Customer_Master_Configurations__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>notEqual</operation>
    </filters>
    <label>All</label>
</ListView>