force-app/main/default/objects/Customer_Master_Configurations__c/listViews/Constants.listView-meta.xml
<ListView>
    <fullName>Constants</fullName>
    <columns>NAME</columns>
    <columns>Constant_value__c</columns>
    <columns>Constant_Description__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Constant_value__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Constants</label>
</ListView>