force-app/main/default/objects/Customer_Master_Configurations__c/listViews/DML_Orchestrator.listView-meta.xml
<ListView>
    <fullName>DML_Orchestrator</fullName>
    <columns>NAME</columns>
    <columns>Configuration_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Configuration_Type__c</field>
        <operation>equals</operation>
        <value>DML Orchestration</value>
    </filters>
    <label>DML Orchestrator</label>
</ListView>