force-app/main/default/objects/Customer_Master_Configurations__c/listViews/DML_Orchestrator_ReltioHCOHCOService.listView-meta.xml
<ListView>
    <fullName>DML_Orchestrator_ReltioHCOHCOService</fullName>
    <columns>NAME</columns>
    <columns>Configuration_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>DML Orchestrator ReltioHCOHCOService</label>
</ListView>