force-app/main/default/objects/Customer_Master_Configurations__c/listViews/DML_Orchestrator_ReltioHCOService.listView-meta.xml
<ListView>
    <fullName>DML_Orchestrator_ReltioHCOService</fullName>
    <columns>NAME</columns>
    <columns>Configuration_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>DML Orchestrator ReltioHCOService</label>
</ListView>